fixes black screen dark mode

--- a/cc/src/styles/LoginComponentStyles.css
+++ b/cc/src/styles/LoginComponentStyles.css
@@ -22,7 +22,7 @@
     --border-radius: 4px;
     /* --border-width: 1px; */
     --box-shadow: none;
-    --color: #1f1f1f;
+    --color: var(--ion-color-dark);
     --padding-top: 0;
     --padding-bottom: 0;
     --padding-left: 0;
@@ -120,4 +120,6 @@
   }
 
 
-  
+  body.dark .loginBtn {
+    --color: var(--ion-color-light);
+  }
