--- a/cc/src/styles/SignUpComponentStyles.css
+++ b/cc/src/styles/SignUpComponentStyles.css
@@ -87,7 +87,7 @@
       --border-radius: 4px;
       /* --border-width: 1px; */
       --box-shadow: none;
-      --color: #1f1f1f;
+      --color: var(--ion-color-dark);
       --padding-top: 0;
       --padding-bottom: 0;
       --padding-left: 0;
@@ -135,3 +135,6 @@
       background-repeat: no-repeat;
     }
   
+    body.dark .loginBtn {
+      --color: var(--ion-color-light);
+    }
