--- a/cc/src/theme/variables.css
+++ b/cc/src/theme/variables.css
@@ -82,7 +82,7 @@ http://ionicframework.com/docs/theming/ */
    * -------------------------------------------
    */
 
-  body.dark {
+  body {
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #fafafa;
@@ -152,7 +152,7 @@ http://ionicframework.com/docs/theming/ */
    * -------------------------------------------
    */
 
-  .ios body.dark {
+  .ios body {
     --ion-background-color: #1f1f1f;
     --ion-background-color-rgb: 68,68,68;
 
@@ -184,7 +184,7 @@ http://ionicframework.com/docs/theming/ */
     --ion-card-background: #1c1c1d;
   }
 
-  .ios body.dark ion-modal {
+  .ios body ion-modal {
     --ion-background-color: var(--ion-color-step-100);
     --ion-toolbar-background: var(--ion-color-step-150);
     --ion-toolbar-border-color: var(--ion-color-step-250);
@@ -233,7 +233,7 @@ http://ionicframework.com/docs/theming/ */
    * -------------------------------------------
    */
 
-  .md body.dark {
+  .md body {
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
 
